--- a/airport.ui
+++ b/airport.ui
@@ -23,6 +23,11 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>Airport ID:</string>
     </property>
@@ -32,9 +37,14 @@
      <rect>
       <x>40</x>
       <y>120</y>
-      <width>91</width>
+      <width>101</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Airport Name:</string>
@@ -48,6 +58,11 @@
       <width>91</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Country:</string>
@@ -66,37 +81,12 @@
      <string/>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>80</y>
-      <width>161</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <item>
-     <property name="text">
-      <string>LAX</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>JFK</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>LHR</string>
-     </property>
-    </item>
-   </widget>
    <widget class="QComboBox" name="comboBox_2">
     <property name="geometry">
      <rect>
       <x>150</x>
       <y>120</y>
-      <width>161</width>
+      <width>391</width>
       <height>22</height>
      </rect>
     </property>
@@ -121,7 +111,7 @@
      <rect>
       <x>150</x>
       <y>160</y>
-      <width>161</width>
+      <width>391</width>
       <height>22</height>
      </rect>
     </property>
@@ -135,6 +125,54 @@
       <string>United Kingdom</string>
      </property>
     </item>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>200</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>City:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_4">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>200</y>
+      <width>391</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>United States</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>United Kingdom</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>80</y>
+      <width>391</width>
+      <height>22</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
