--- a/AircraftManager.ui
+++ b/AircraftManager.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>774</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>90</y>
+      <y>180</y>
       <width>561</width>
-      <height>391</height>
+      <height>371</height>
      </rect>
     </property>
     <property name="font">
@@ -29,13 +29,13 @@
      </font>
     </property>
     <property name="title">
-     <string/>
+     <string>Aircraft Manager</string>
     </property>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="aircraftBtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>140</y>
+       <x>130</x>
+       <y>100</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -44,11 +44,11 @@
       <string>Aircraft</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="aircraftTypebtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>190</y>
+       <x>130</x>
+       <y>160</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -60,7 +60,7 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>200</x>
+       <x>170</x>
        <y>60</y>
        <width>191</width>
        <height>41</height>
@@ -74,7 +74,20 @@
       </font>
      </property>
      <property name="text">
-      <string> Aircraft Manager</string>
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>50</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Go to:</string>
      </property>
     </widget>
    </widget>
