--- a/FlightManager.ui
+++ b/FlightManager.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>90</y>
+      <y>110</y>
       <width>561</width>
       <height>391</height>
      </rect>
@@ -29,13 +29,13 @@
      </font>
     </property>
     <property name="title">
-     <string/>
+     <string>Flight Manager</string>
     </property>
     <widget class="QPushButton" name="flightBtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>140</y>
+       <x>100</x>
+       <y>90</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -47,8 +47,8 @@
     <widget class="QPushButton" name="flightTypeBtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>190</y>
+       <x>100</x>
+       <y>150</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -57,37 +57,30 @@
       <string>Flight Type</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>40</y>
-       <width>351</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Logged in as Flight Manager</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="flightStatusBtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>240</y>
+       <x>100</x>
+       <y>210</y>
        <width>150</width>
        <height>30</height>
       </rect>
      </property>
      <property name="text">
       <string>Flight Status</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>50</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Go to:</string>
      </property>
     </widget>
    </widget>
