--- a/AircraftManager.ui
+++ b/AircraftManager.ui
@@ -19,8 +19,8 @@
      <rect>
       <x>100</x>
       <y>180</y>
-      <width>561</width>
-      <height>371</height>
+      <width>491</width>
+      <height>291</height>
      </rect>
     </property>
     <property name="font">
@@ -90,6 +90,19 @@
       <string>Go to:</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="amBack">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>490</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
