--- a/FlightManager.ui
+++ b/FlightManager.ui
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FlightManager</class>
- <widget class="QMainWindow" name="FlightManager">
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>547</width>
-    <height>458</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>FlightManager</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="FlightManager_2">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>60</y>
-      <width>391</width>
-      <height>251</height>
+      <x>100</x>
+      <y>90</y>
+      <width>481</width>
+      <height>341</height>
      </rect>
     </property>
     <property name="font">
@@ -29,28 +29,15 @@
      </font>
     </property>
     <property name="title">
-     <string>FlightManager</string>
+     <string>Flight Manager</string>
     </property>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>30</y>
-       <width>55</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Go to:</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="FlightBtn">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>60</y>
-       <width>111</width>
-       <height>31</height>
+       <x>100</x>
+       <y>90</y>
+       <width>150</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="text">
@@ -60,10 +47,10 @@
     <widget class="QPushButton" name="TypeBtn">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>110</y>
-       <width>111</width>
-       <height>31</height>
+       <x>100</x>
+       <y>150</y>
+       <width>150</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="text">
@@ -73,30 +60,38 @@
     <widget class="QPushButton" name="StatusBtn">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>160</y>
-       <width>111</width>
-       <height>31</height>
+       <x>100</x>
+       <y>210</y>
+       <width>150</width>
+       <height>30</height>
       </rect>
      </property>
      <property name="text">
       <string>Flight Status</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>50</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Go to:</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="FMBackBtn">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>330</y>
-      <width>93</width>
-      <height>28</height>
+      <x>430</x>
+      <y>440</y>
+      <width>150</width>
+      <height>30</height>
      </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
     </property>
     <property name="text">
      <string>Back</string>
@@ -108,7 +103,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>547</width>
+     <width>800</width>
      <height>26</height>
     </rect>
    </property>
