--- a/aircraft .ui
+++ b/aircraft .ui
@@ -135,10 +135,10 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="deleteAircarft">
+   <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>550</x>
       <y>250</y>
       <width>93</width>
       <height>28</height>
@@ -148,10 +148,10 @@
      <string>Delete</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="addAircraft">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>450</x>
       <y>250</y>
       <width>93</width>
       <height>28</height>
@@ -161,10 +161,10 @@
      <string>Add</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="addAircraft_2">
+   <widget class="QPushButton" name="aircraftBack">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>660</x>
       <y>250</y>
       <width>93</width>
       <height>28</height>
