--- a/airportManager.ui
+++ b/airportManager.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>airportBack</class>
+ <widget class="QMainWindow" name="airportBack">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>705</width>
-    <height>519</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>50</y>
-      <width>561</width>
-      <height>391</height>
+      <x>130</x>
+      <y>70</y>
+      <width>551</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="font">
@@ -31,11 +31,11 @@
     <property name="title">
      <string>Airport Manager</string>
     </property>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="airlineBtn">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>100</y>
+       <x>140</x>
+       <y>60</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -44,11 +44,11 @@
       <string>Airline</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="airportBtn">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>160</y>
+       <x>140</x>
+       <y>110</y>
        <width>150</width>
        <height>30</height>
       </rect>
@@ -60,10 +60,10 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>60</y>
-       <width>55</width>
-       <height>16</height>
+       <x>50</x>
+       <y>30</y>
+       <width>61</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="text">
@@ -71,13 +71,26 @@
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="airportManagerBack">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>290</y>
+      <width>150</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>705</width>
+     <width>800</width>
      <height>26</height>
     </rect>
    </property>
