Update flight .ui

--- a/flight .ui
+++ b/flight .ui
@@ -280,8 +280,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>540</y>
+      <x>610</x>
+      <y>550</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -290,11 +290,29 @@
      <string>Delete</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="flightBack">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>550</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>540</y>
+      <x>510</x>
+      <y>550</y>
       <width>93</width>
       <height>28</height>
      </rect>
