--- a/flight type.ui
+++ b/flight type.ui
@@ -76,7 +76,7 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>660</x>
+      <x>590</x>
       <y>140</y>
       <width>93</width>
       <height>28</height>
@@ -89,7 +89,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>490</x>
       <y>140</y>
       <width>93</width>
       <height>28</height>
@@ -97,6 +97,19 @@
     </property>
     <property name="text">
      <string>Add</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="flightTypeBack">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>140</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Back</string>
     </property>
    </widget>
   </widget>
