--- a/admin.ui
+++ b/admin.ui
@@ -6,36 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>604</width>
-    <height>701</height>
+    <width>1043</width>
+    <height>619</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>10</y>
-      <width>301</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Admin's Workspace</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>110</x>
       <y>130</y>
       <width>55</width>
       <height>16</height>
@@ -48,10 +30,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>80</y>
-      <width>511</width>
-      <height>291</height>
+      <x>70</x>
+      <y>70</y>
+      <width>431</width>
+      <height>261</height>
      </rect>
     </property>
     <property name="font">
@@ -65,40 +47,40 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>80</y>
+       <x>70</x>
+       <y>70</y>
        <width>81</width>
        <height>41</height>
       </rect>
      </property>
      <property name="text">
-      <string>Username</string>
+      <string>Username:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>130</y>
+       <x>70</x>
+       <y>120</y>
        <width>81</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Password</string>
+      <string>Password:</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>230</y>
-       <width>81</width>
+       <x>100</x>
+       <y>200</y>
+       <width>51</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Role</string>
+      <string>Role:</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="Username">
@@ -106,7 +88,7 @@
       <rect>
        <x>160</x>
        <y>90</y>
-       <width>331</width>
+       <width>241</width>
        <height>22</height>
       </rect>
      </property>
@@ -115,8 +97,8 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>140</y>
-       <width>331</width>
+       <y>130</y>
+       <width>241</width>
        <height>22</height>
       </rect>
      </property>
@@ -128,8 +110,8 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>240</y>
-       <width>331</width>
+       <y>210</y>
+       <width>241</width>
        <height>22</height>
       </rect>
      </property>
@@ -137,14 +119,14 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>90</x>
        <y>50</y>
        <width>55</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>Name</string>
+      <string>Name:</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="Name">
@@ -152,7 +134,7 @@
       <rect>
        <x>160</x>
        <y>50</y>
-       <width>331</width>
+       <width>241</width>
        <height>22</height>
       </rect>
      </property>
@@ -160,22 +142,22 @@
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>190</y>
-       <width>141</width>
+       <x>20</x>
+       <y>170</y>
+       <width>121</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>Confirm Password</string>
+      <string>Confirm Password:</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="ConfirmPassword">
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>190</y>
-       <width>331</width>
+       <y>170</y>
+       <width>241</width>
        <height>22</height>
       </rect>
      </property>
@@ -187,10 +169,10 @@
    <widget class="QPushButton" name="AAddBtn">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>390</y>
-      <width>93</width>
-      <height>28</height>
+      <x>390</x>
+      <y>340</y>
+      <width>111</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -202,13 +184,52 @@
      <string>Add</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="ABackBtn">
+    <property name="geometry">
+     <rect>
+      <x>740</x>
+      <y>370</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>10</y>
+      <width>81</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Berlin Sans FB Demi</family>
+      <pointsize>17</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Admin</string>
+    </property>
+   </widget>
    <widget class="QTableWidget" name="AdminTable">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>440</y>
+      <x>550</x>
+      <y>80</y>
       <width>451</width>
-      <height>201</height>
+      <height>271</height>
      </rect>
     </property>
     <column>
@@ -223,17 +244,73 @@
     </column>
     <column>
      <property name="text">
+      <string>Password</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
       <string>Role</string>
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="ABackBtn">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>390</y>
-      <width>93</width>
-      <height>28</height>
+      <x>70</x>
+      <y>400</y>
+      <width>431</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="title">
+     <string>Delete Account</string>
+    </property>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>40</y>
+       <width>55</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Username:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="Name_2">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>40</y>
+       <width>241</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="ADelBtn">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>510</y>
+      <width>111</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -242,7 +319,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Back</string>
+     <string>Delete</string>
     </property>
    </widget>
   </widget>
@@ -251,8 +328,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>604</width>
-     <height>26</height>
+     <width>1043</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
